[project]
name = "dasein-as-a-degenerate"
version = "0.1.0"
description = "Bloomberg Terminal for event contract degeneracy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0.0",
    "ipykernel>=6.29.5",
    "kalshi-python>=2.0.0",
    "load-dotenv>=0.1.0",
    "requests>=2.32.3",
    "numpy>=1.26.0",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "requests-cache>=1.2.1",
]
[project.scripts]
dev = "src.daad.main:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
